[gd_scene load_steps=4 format=3 uid="uid://bg8uh3vpxabqt"]

[ext_resource type="Script" path="res://script/main.gd" id="1_slk0q"]
[ext_resource type="PackedScene" uid="uid://b2jsmiry643ci" path="res://prefabs/palyer.tscn" id="1_yimkm"]

[sub_resource type="Curve2D" id="Curve2D_1eueh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node2D"]
script = ExtResource("1_slk0q")

[node name="player" parent="." instance=ExtResource("1_yimkm")]
position = Vector2(244, 348)

[node name="BugTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 360)

[node name="BugPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_1eueh")

[node name="BugPathLocation" type="PathFollow2D" parent="BugPath"]

[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="BugTimer" to="." method="_on_bug_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
